# XORCryptor-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cipher.rs  err.rs  lib.rs  test.rs  v2.rs
