[package]
name = "xor_cryptor"
version = "1.0.0"
edition = "2021"
authors = ["Shashank Verma <shank03>"]
license = "MIT"
description = "A encryption/decryption library using bitwise xor"
repository = "https://github.com/shank03/XORCryptor-Rust"
readme = "README.md"
keywords = ["xor", "cryptor", "encryption", "decryption", "cipher"]
categories = ["cryptography", "xor"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
