[package]
name = "xor_cryptor"
version = "2.0.1"
edition = "2021"
authors = ["Shashank Verma <shank03>"]
license = "MIT"
description = "A encryption/decryption library using bitwise xor"
repository = "https://github.com/shank03/XORCryptor-Rust"
readme = "README.md"
keywords = ["xor", "cryptor", "encryption", "decryption", "cipher"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.9.0"
